@@ -24,6 +24,7 @@ Minor features
  * The wagtailimages.Filter model has been removed, and converted to a Python class instead (Gagaro)
  * Multiple ChooserBlocks inside a StreamField are now prefetched in bulk, for improved performance (Michael van Tellingen, Roel Bruggink, Matt Westcott)
  * Added new EmailBlock and IntegerBlock (Oktay Altay)
+ * Wagtail version number is now shown on the settings menu (Chris Rogers)
 
 
 Bug fixes
