@@ -9,7 +9,7 @@ $submenu-color: darken($color-grey-1, 5%);
     height: 100%;
     min-height: 800px;
     background: $color-grey-1;
-    
+
     .inner {
         background: $color-grey-1;
     }
@@ -34,7 +34,7 @@ $submenu-color: darken($color-grey-1, 5%);
     overflow: auto;
     width: 100%;
 
-    ul, 
+    ul,
     li {
         margin: 0;
         padding: 0;
@@ -136,6 +136,11 @@ $submenu-color: darken($color-grey-1, 5%);
     li {
         border: 0;
     }
+
+    .wagtail-version {
+        padding: 1.2em 1.7em;
+        text-align: center;
+    }
 }
 
 .explorer {
@@ -153,7 +158,7 @@ $submenu-color: darken($color-grey-1, 5%);
         @include visuallyhidden();
     }
 
-    input, 
+    input,
     button {
         border-radius: 0;
         font-size: 1em;
@@ -171,7 +176,7 @@ $submenu-color: darken($color-grey-1, 5%);
             background-color: darken($color-grey-2, 10%);
         }
 
-        &:active, 
+        &:active,
         &:focus {
             background-color: darken($color-grey-2, 5%);
             color: $color-white;
@@ -358,6 +363,7 @@ body.explorer-open {
                 opacity: 0.15;
             }
         }
+
     }
 
     li.submenu-active {
@@ -434,7 +440,7 @@ body.explorer-open {
 }
 
 // Media query hacks to detect IE10+ which doesn't support 3d transform of static elements and needs a fallback
-@media all and (-ms-high-contrast: none), 
+@media all and (-ms-high-contrast: none),
        all and (-ms-high-contrast: active) {
     .wrapper {
         @include transition(left 0.2s ease);
